--- a/templates/Static/package.json
+++ b/templates/Static/package.json
@@ -15,6 +15,7 @@
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-minify-css": "^0.3.13",
+    "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.2",
     "gulp-serve": "^0.3.1",
